fixed x-movement on mobile

--- a/front-end/public/css/styles.css
+++ b/front-end/public/css/styles.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .container {
   background-color: teal;
   display: flex;
@@ -186,16 +190,12 @@ p {
   width: 195px;
 }
 
-.volunteer-form > form > div:nth-last-child(2) {
+.volunteer-form > form > div:nth-child(7) {
   width: 400px;
 }
 
 .volunteer-form button {
   display: block;
-}
-
-#guardian-fields {
-  display: inline;
 }
 
 @media only screen and (max-width: 1223px) {
@@ -205,14 +205,11 @@ p {
   .volunteer-form > form {
     text-align: center;
   }
-  .volunteer-form > form > div, #guardian-fields > div {
-    margin-right: 0px !important;
+  .volunteer-form > form > div {
+    margin-right: 0px;
     width: 48%;
   }
-  #guardian-fields > div {
-    width: 48% !important;
-  }
-  .volunteer-form > form > div:nth-last-child(2) {
+  .volunteer-form > form > div:nth-child(7) {
     width: 96%;
   }
   .volunteer-form {
@@ -220,10 +217,6 @@ p {
   }
   .volunteer-form button {
     margin-left: 20px;
-  }
-  #guardian-fields {
-    width: 100%;
-    display: block;
   }
 }
 
@@ -343,13 +336,19 @@ p {
 .past-events {
   background-color: #ffcc0080;
   overflow: auto;
+}
+
+.past-events h1 {
   color: #009999;
+}
+
+.past-events a {
+  text-decoration: none;
 }
 
 .past-photos {
   font-size: 20px;
   font-style: italic;
-  text-decoration: none;
   color: black;
 }
 
